// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test component [Button] Renders correctly [Button] 1`] = `
<button
  className="sc-bdVaJa Ggrmq"
  disabled={false}
  id=""
  onClick={null}
  size="Big"
  type=""
>
  Text Button
</button>
`;

exports[`Test component [Button] Renders correctly defaultProps [Button] 1`] = `
<button
  className="sc-bdVaJa Ggrmq"
  disabled={false}
  id=""
  onClick={null}
  size="Big"
  type=""
>
  Hola
</button>
`;
